# CMakeSeries

./: .gitignore  README.md
Ep002/src/: CMakeLists.txt  main.cpp
Ep005/source/: CMakeLists.txt  main.cpp
Ep005/source/include/: dog.h
Ep007/source/: CMakeLists.txt  main.cpp
Ep007/source/logger/src/: log.cpp
Ep007/source/src/: dog.cpp
Ep010/source/: CMakeLists.txt
Ep010/source/logger/: CMakeLists.txt
Ep010/source/logger/include/: log.h
